[package]
name = "greylistd"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
anyhow = "1.0.95"
serde_ini = "0.2.0"
serde = { version = "1.0.217", features = ["derive"] }
systemd = { version = "0.10.0", optional = true, default-features = false }
serde_plain = "1.0.2"
crossbeam-channel = "0.5.14"
signal-hook = "0.3.17"

[features]
default = ["systemd"]
